--- a/assets/sass/abstract/fonts.scss
+++ b/assets/sass/abstract/fonts.scss
@@ -1,41 +1,34 @@
 @font-face {
-  font-family: "NanumBarunGothic";
+  font-family: "CircularStd";
   font-weight: 200;
-  src: url("../fonts/NanumBarunGothicLight.woff"),
-    url("../fonts/NanumBarunGothicLight.woff2");
+  src: url("../fonts/CircularStd-Book.woff"),
+    url("../fonts/CircularStd-Book.woff2");
 }
 
 @font-face {
-  font-family: "NanumBarunGothic";
+  font-family: "CircularStd";
   font-weight: normal;
-  src: url("../fonts/NanumBarunGothic.woff"),
-    url("../fonts/NanumBarunGothic.woff2");
+  src: url("../fonts/CircularStd-Medium.woff"),
+    url("../fonts/CircularStd-Medium.woff2");
 }
 
 @font-face {
-  font-family: "NanumBarunGothic";
+  font-family: "CircularStd";
   font-weight: bold;
-  src: url("../fonts/NanumBarunGothicBold.woff"),
-    url("../fonts/NanumBarunGothicBold.woff2");
+  src: url("../fonts/CircularStd-Bold.woff"),
+    url("../fonts/CircularStd-Bold.woff2");
 }
 
 @font-face {
-  font-family: "NanumSquareRound";
-  font-weight: 200;
-  src: url("../fonts/NanumSquareRoundOTFL.woff"),
-    url("../fonts/NanumSquareRoundOTFL.woff2");
-}
-
-@font-face {
-  font-family: "NanumSquareRound";
+  font-family: "SourceHansSansK";
   font-weight: normal;
-  src: url("../fonts/NanumSquareRoundOTFR.woff"),
-    url("../fonts/NanumSquareRoundOTFR.woff2");
+  src: url("../fonts/SourceHanSansK-Medium.woff"),
+    url("../fonts/SourceHanSansK-Medium.woff2");
 }
 
 @font-face {
-  font-family: "NanumSquareRound";
+  font-family: "SourceHansSansK";
   font-weight: bold;
-  src: url("../fonts/NanumSquareRoundOTFEB.woff"),
-    url("../fonts/NanumSquareRoundOTFEB.woff2");
+  src: url("../fonts/SourceHanSansK-Bold.woff"),
+    url("../fonts/SourceHanSansK-Bold.woff2");
 }
