--- a/src/components/_head.html
+++ b/src/components/_head.html
@@ -9,6 +9,7 @@
   {{ include("seo.html") }}
 
   <link rel="stylesheet" href="{{ URL }}/assets/vendors/aos/aos.css">
+  <link rel="stylesheet" href="{{ URL }}/assets/vendors/xeicon/xeicon.min.css">
   <link rel="stylesheet" href="{{ URL }}/assets/css/app.css">
 
   {{ if (styles) {
