--- a/src/components/_foot.html
+++ b/src/components/_foot.html
@@ -2,6 +2,7 @@
   <script src="{{ URL }}/assets/vendors/aos/aos.js"></script>
   <script src="{{ URL }}/assets/vendors/jquery-2.2.4.min.js"></script>
   <script src="{{ URL }}/assets/vendors/swiper/swiper.min.js"></script>
+  <script src="{{ URL }}/assets/vendors/masonry.pkgd.min.js"></script>
   <script src="{{ URL }}/assets/js/app.js"></script>
   {{ for(index in scripts) {
     <script src="{{ URL }}` + scripts[index] + `"></script>
