--- a/src/components/_head.html
+++ b/src/components/_head.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>우리의 하루</title>
+  <title>203 labs</title>
 
   {{ include("seo.html") }}
 
   <link rel="stylesheet" href="{{ URL }}/assets/vendors/aos/aos.css">
   <link rel="stylesheet" href="{{ URL }}/assets/vendors/xeicon/xeicon.min.css">
   <link rel="stylesheet" href="{{ URL }}/assets/css/app.css">
+  <link rel="stylesheet" href="{{ URL }}/assets/css/app.m.css">
 
   {{ if (styles) {
     {{ for(index in styles) {
