--- a/assets/sass/app.m.scss
+++ b/assets/sass/app.m.scss
@@ -3,7 +3,13 @@
   .mbr {
     display:block
   }
+  .is-mobile {
+    display: block;
+  }
   // layout
+  body.menu-open {
+    overflow:hidden;
+  }
   .wrapper {
     padding:40px 30px 0 30px;
     max-width:100%;
@@ -12,34 +18,64 @@
     z-index:1000;
     position:fixed;
     top:0;
+    left:0;
     width:100%;
     margin:0;
-    padding:40px 0 0 0;
+    padding:40px 30px 0 30px;
     .main-menu {
       z-index:-1;
-      position:fixed;
+      position:absolute;
       top:0;
       left:0;
       width:100%;
-      height:100%;
+      min-height:100%;
       display:block;
       visibility:hidden;
+      padding:40px 30px 35px 30px;
       opacity:0;
-      &.is-open{
-        z-index:1;
-        visibility:visible;
-        opacity:1;
+      background:#000;
+      transform:scale(0.9);
+      transition:all 0.3s ease-out;
+      .logo {
+        display:block;
+      }
+      ul {
+        margin:70px 0 0 0;
+        li {
+          float:none;
+          margin:0;
+          font-size:30px;
+          font-weight:500;
+          line-height:1.6;
+          a {
+            color:#fff;
+          }
+        }
+      }
+      .text {
+        margin:100px 0 0 0;
+        font-size:14px;
+        font-weight:100;
+        font-family: "CircularStd";
+        line-height:1.4;
+        color:#fff;
+        letter-spacing:0;
+        p ~ p {
+          margin:110px 0 0 0;
+        }
       }
     }
     .btn-hamburger {
       position: absolute;
-      top:0;
-      right:0;
+      top:40px;
+      right:30px;
       display:block;
       width:30px;
       height:30px;
       text-align:right;
       outline:none;
+      background:none;
+      border:none;
       &::before,
       &::after{
         position:absolute;
@@ -50,6 +86,7 @@
         width:24px;
         height:3px;
         background:#000;
+        transition:all 0.3s ease-out;
       }
       &::after {
         top:12px;
@@ -59,6 +96,33 @@
         display:block;
         text-indent:-9999px;
         text-align:left;
+      }
+    }
+    &.is-open {
+      height:100%;
+      overflow-x:hidden;
+      overflow-y:auto;
+      -webkit-overflow-scrolling:touch;
+      .btn-hamburger {
+        z-index:10;
+        &::before,
+        &::after{
+          right:-3px;
+          top:10px;
+          background:#fff;
+        }
+        &::before{
+          transform: rotate(-45deg);
+        }
+        &::after{
+          transform: rotate(45deg);
+        }
+      }
+      .main-menu {
+        z-index:1;
+        visibility:visible;
+        opacity:1;
+        transform:scale(1);
       }
     }
   }
@@ -77,15 +141,19 @@
   
   .section {
     &-01 {
-      margin-top:50px;
+      margin-top:100px;
       .title {
         font-size:30px;
         letter-spacing:-0.5px;
       }
       .text {
+        margin:67px 0 0 0;
         font-size:16px;
         line-height:1.75;
         letter-spacing:-0.5px;
+        & ~ .text {
+          margin-top:36px;
+        }
       }
       .img {
         margin-right:-30px;
@@ -190,9 +258,16 @@
   // card
   .card {
     // display:none;
-    // &-img {
-
-    // }
+    &-img {
+      overflow:visible;
+      img {
+        box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+        transform: scale(1);
+      }
+      &:hover{
+        transform: scale(1);
+      }
+    }
     // &-text {
 
     // }
