--- a/assets/sass/app.m.scss
+++ b/assets/sass/app.m.scss
@@ -1,7 +1,7 @@
 @media (max-width:768px) {
   // common
   .mbr {
-    display:block
+    display:block !important;
   }
   .is-mobile {
     display: block;
@@ -127,7 +127,7 @@
     }
   }
   .footer {
-    margin:0;
+    margin:60px 0 0 0;
     padding-bottom:60px;
     img {
       float:none;
@@ -151,47 +151,54 @@
         font-size:16px;
         line-height:1.75;
         letter-spacing:-0.5px;
+        br {
+          display:none;
+        }
         & ~ .text {
           margin-top:36px;
         }
       }
       .img {
-        margin-right:-30px;
+        margin:30px -30px 0 0;
         width:auto;
       }
     }
     &-02 {
-      margin-top:50px;
+      margin-top:72px;
       .title {
+        margin-bottom:57px;
         font-size:40px;
       }
     }
     &-03 {
-      margin-top:50px;
+      margin:44px 0 0 0;
       .title {
-        margin-bottom:14px;
+        margin-bottom:28px;
         font-size:40px;
       }
       .category {
+        margin-bottom:63px;
         font-size:20px;
         font-weight:100;
       }
     }
     &-04 {
-      margin-top:50px;
+      margin:120px 0 0 0;
       .title {
         float:none;
         margin:0;
         font-size:28px;
+        line-height:1.5;
         letter-spacing:-0.5px;
       }
       .text {
         float:none;
-        margin:0;
+        margin:30px 0 0 0;
         font-size:24px;
         line-height:1.42;
       }
       .mail {
+        margin-top:48px;
         padding-bottom:15px;
         font-size:20px;
         letter-spacing:0;
@@ -199,7 +206,7 @@
           height:2px;
         }
         i {
-          top:0;
+          top:-1px;
           font-size:24px;
         }
       }
@@ -217,17 +224,34 @@
       display:block;
       width:100%;
       padding:0;
+      &:nth-child(1) {
+        .business-img img {
+          width:97px;
+        }
+      }
+      &:nth-child(2) {
+        .business-img img {
+          width:115px;
+        }
+      }
+      &:nth-child(3) {
+        .business-img img {
+          width:77px;
+        }
+      }
     }
     &-title {
       margin:0;
       font-size:24px;
     }
     &-list {
+      margin-top:43px;
       font-size:16px;
       line-height:1.75;
     }
     &-img {
       margin:0;
+      padding-top:350px;
     }
   }
 
@@ -241,15 +265,16 @@
           padding:0;
         }
         & ~ li {
-          margin-top:50px;
+          margin-top:65px;
         }
       }
     }
     &-more {
       padding:4px 0;
+      margin-top:64px;
       border-width:2px;
       i {
-        top:3px;
+        top:2px;
         font-size:20px;
       }
     }
@@ -260,6 +285,7 @@
     // display:none;
     &-img {
       overflow:visible;
+      margin-bottom:30px;
       img {
         box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
         transform: scale(1);
@@ -268,15 +294,15 @@
         transform: scale(1);
       }
     }
-    // &-text {
-
-    // }
+    &-title {
+      margin-bottom:14px;
+    }
     &-state {
       position: static;
       display:block;
       right:0;
       bottom:0;
-      margin:13px 0 0 0;
+      margin:20px 0 0 0;
       transform:rotate(0)
     }
   }
