--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -172,6 +172,8 @@ img {
         position: absolute;
         top: 10px;
         right: 0;
+        transition:right .2s ease;
+        animation:arrow .8s infinite alternate;
       }
       &::before {
         content: '';
@@ -254,6 +256,8 @@ img {
       position: absolute;
       top: 6px;
       right: 0;
+      transition:right .2s ease;
+      animation:arrow .8s infinite alternate;
     }
   }
 }
@@ -380,4 +384,12 @@ img {
   }
 }
 
-// animation
+// 화살표 animation
+@keyframes arrow {
+  0% {
+    right:5px
+  }
+  100% {
+    right:0;
+  }
+}
