--- a/assets/sass/app.m.scss
+++ b/assets/sass/app.m.scss
@@ -182,6 +182,7 @@
       }
       .category {
         -webkit-overflow-scrolling:touch;
+        height:30px;
         margin-bottom: 63px;
         font-size: 20px;
         font-weight: 100;
