--- a/assets/sass/app.m.scss
+++ b/assets/sass/app.m.scss
@@ -177,13 +177,14 @@
     &-03 {
       margin: 44px 0 0 0;
       .title {
-        margin-bottom: 28px;
+        margin-bottom: 18px;
         font-size: 40px;
       }
       .category {
         -webkit-overflow-scrolling:touch;
-        height:30px;
-        margin-bottom: 63px;
+        margin: 0 -30px;
+        margin-bottom: 53px;
+        padding: 10px 30px;
         font-size: 20px;
         font-weight: 100;
         a {
@@ -224,6 +225,7 @@
 
   // business
   .business {
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     // justify-content: space-between;
