--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -194,6 +194,7 @@ img {
   width: 100%;
   font-size: 16px;
   line-height: 28px;
+  margin: 0 -10px;
   a {
     color: #222;
   }
@@ -201,12 +202,6 @@ img {
     display: table-cell;
     width: 33.33%;
     padding: 0 10px;
-    &:first-child {
-      padding-left: 0;
-    }
-    &:last-child {
-      padding-right: 0;
-    }
   }
   &-title {
     margin: 34px 0;
@@ -232,6 +227,8 @@ img {
 .masonry {
   &-list {
     margin: 0 0;
+    min-height: 800px;
+    overflow: visible !important;
     &-item {
       width: 50%;
       padding: 22px 80px 22px 0;
