수정사항 대응

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -169,6 +169,7 @@ img {
       font-weight: 200;
       letter-spacing: -1.5px;
       color: #222;
+      font-family: "CircularStd";
       i {
         position: absolute;
         top: 10px;
