--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -322,7 +322,7 @@ img {
     right: -22px;
     color: #959595;
     font-size: 16px;
-    font-family: "CirculaStd";
+    font-family: "CircularStd";
     transform: rotate(90deg);
     transform-origin: 100% 100%;
   }
