--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -323,6 +323,7 @@ img {
     color: #959595;
     font-size: 16px;
     font-family: "CircularStd";
+    font-weight: 200;
     transform: rotate(90deg);
     transform-origin: 100% 100%;
   }
